--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,23 @@
+# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
+
 [project]
 name = "lanwatch"
+description = "Scans your network at certain intervals for devices and provides a web based GUI to manage them"
+readme = "README.md"
 dynamic = ["version"]
+license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
+license-files = ["LICEN[CS]E*"]
+keywords = ["arp", "scan", "arp-scan", "monitor", "watch", "alert"]
+requires-python = ">= 3.8"
 dependencies = [
     "requests",
-    'importlib-metadata; python_version<"3.10"',
+    "nicegui>=2.0.0"
+]
+authors = [
+  {name = "Ingo Ratsdorf", email = "ingo@envirology.co.nz"}
+]
+maintainers = [
+  {name = "Ingo Ratsdorf", email = "ingo@envirology.co.nz"}
 ]
 
 [build-system]
